# ppo-implementation-details

./: ppo.py  requirements.txt
ppo-remake/: ppo.py  pyproject.toml
ppo-remake/runs/CartPole-v1__ppo__1__1694077102/: events.out.tfevents.1694077102.moonshot1-Z790-S01.132021.0
ppo-remake/runs/CartPole-v1__ppo__1__1694077514/: events.out.tfevents.1694077514.moonshot1-Z790-S01.133938.0
ppo-remake/runs/CartPole-v1__ppo__1__1694078274/: events.out.tfevents.1694078274.moonshot1-Z790-S01.137060.0
ppo-remake/runs/CartPole-v1__ppo__1__1694080571/: events.out.tfevents.1694080571.moonshot1-Z790-S01.143890.0
ppo-remake/runs/CartPole-v1__ppo__1__1694081379/: events.out.tfevents.1694081561.moonshot1-Z790-S01.144944.0
ppo-remake/runs/CartPole-v1__ppo__1__1694085520/: events.out.tfevents.1694085520.moonshot1-Z790-S01.147818.0
ppo-remake/runs/CartPole-v1__ppo__1__1694088246/: events.out.tfevents.1694088246.moonshot1-Z790-S01.7049.0
ppo-remake/runs/CartPole-v1__ppo__1__1694088296/: events.out.tfevents.1694088296.moonshot1-Z790-S01.7294.0
ppo-remake/runs/CartPole-v1__ppo__1__1694088495/: events.out.tfevents.1694088495.moonshot1-Z790-S01.8732.0
ppo-remake/wandb/: latest-run
ppo-remake/wandb/run-20230907_191240-xix0zhga/: run-xix0zhga.wandb
ppo-remake/wandb/run-20230907_191240-xix0zhga/files/: config.yaml  diff.patch  events.out.tfevents.1694081561.moonshot1-Z790-S01.144944.0  requirements.txt  wandb-metadata.json  wandb-summary.json
ppo-remake/wandb/run-20230907_191240-xix0zhga/files/code/ppo-remake/: ppo.py
wandb/: latest-run
(+156 files in other folders)
