[tool.poetry]
name = "ppo-remake"
version = "0.1.0"
description = ""
authors = ["ppama <pbnpama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.26.2"
torch = ">=2.0.0, !=2.0.1"
stable-baselines3 = "^2.1.0"
wandb = "^0.15.10"
gymnasium = "^0.29.1"
requests = "^2.31.0"
tensorboard = "^2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
